--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rehype-katex": "5",
-    "remark-math": "3"
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.3"
