--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
   },
   "dependencies": {
     "@algolia/ui-library": "^9.16.1",
+    "@cmfcmf/docusaurus-search-local": "^1.2.0",
     "@docusaurus/core": "^2.4.3",
     "@docusaurus/preset-classic": "^2.4.3",
     "@docusaurus/utils": "2.4.3",
-    "@easyops-cn/docusaurus-search-local": "^0.49.2",
     "@mdx-js/react": "^1.6.22",
+    "@node-rs/jieba": "^2.0.1",
     "clsx": "^1.2.1",
-    "cs-engineering": "file:",
     "feishu-pages": "^0.7.6",
     "gray-matter": "^4.0.3",
+    "node-gyp": "^11.2.0",
+    "nodejieba": "^3.4.4",
     "pinyin-pro": "^3.26.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
@@ -50,6 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "cheerio": "1.0.0-rc.12"
   },
   "engines": {
     "node": ">=16.14"
